[package]
name = "practice"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.0"
[[bench]]
name = "my_benchmark"
harness = false